tests/language_modules/11_errors_results/invalid_semantics/wrong_result_error_return.vf
module WrongResultErrorReturn

error NotFound
error PermissionDenied

function load() returns Result<Integer, NotFound>
is
    return error PermissionDenied
end load

end WrongResultErrorReturn